# foundations-of-agentic-systems

./: README.md
final_package_pl/code/: .gitignore  README.md  pyproject.toml
final_package_pl/code/data/corpus/: papers.jsonl
final_package_pl/code/data/expected_task_specs/: boundary_handoff.json  tradeoff_memory_vs_tools.json
final_package_pl/code/data/memory/: seed_memory.jsonl
final_package_pl/code/data/requests/: boundary_handoff.txt  stale_memory_harms.txt  tool_success_not_task_success.txt  tradeoff_memory_vs_tools.txt
final_package_pl/code/docs/: architecture-variants.md  architecture.md  assumptions.md  bridge-refresh.md  capstone-synthesis-guide.md  deferred-topics-and-boundaries.md  mastery_coverage.md  misconceptions-and-failure-modes.md  running-case-literature-review-assistant.md  trace-reading.md
final_package_pl/code/docs/slices/: AA-S01.md  AA-S02.md  AA-S03.md  AA-S04.md  AA-S05.md  AA-S06.md  AA-S07.md  AA-S08.md  AA-S09.md
final_package_pl/code/examples/: README.md
final_package_pl/code/examples/compare_architectures/boundary_handoff/: boundary_note.md  comparison_matrix.md  failure_diagnosis.md  fit_recommendation.md
final_package_pl/code/examples/compare_architectures/clear_bounded_review/: comparison_matrix.md  failure_diagnosis.md  fit_recommendation.md
final_package_pl/code/examples/run_review/capstone_ambiguous_request/: handoff_note.md  (+4 more)
final_package_pl/code/src/m2a/: __init__.py  baselines.py  tools.py
final_package_pl/code/tests/: test_cli_end_to_end.py  test_feedback.py  test_memory.py  test_stop_and_boundary.py
(+268 files in other folders)
